syntax = "proto3";

package servers;
option go_package = "./gen-go/protos/servers";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}